--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,113 +1,546 @@
-// 变量
-$width:100px;
-$color:red;
-$num:50%*10;
-// $num:50*10px;
-// sass支持的单行注释，这个注释不会被编译到css文件中
-/* 
-  多行注释
-  这个注释会被编译到css文件中
-*/
-h1{
-  color: blue;
-  // font-size: $num2; 访问不到
-}
-.box{
-  $num2:20px;
-  width: $width;
-  height: 50px;
-  p{
-    width: $num;
-    font-size: $num2;
-    color: $color;
-    background-color: #ccc;
-  }
-}
-
-// 嵌套语法
-// 父选择器的标识符 &
-.show{
-  color: red;
-  text-align: center;
+body{
+    background-color: #f4f4f4;
 }
 .wrap{
-  width: 1000px;
-  margin: auto;
-  .header{
-    height: 80px;
-    background-color: #ccc;
-    .title{
-      @extend .show;
-    }
-  }
-  .main{
-    height: 300px;
-    background-color: pink;
-    &-title{
-      @extend .show;
-    }
-    &-content{
-      text-align: center;
-      a{
-        color: red;
-        &:hover{
-          color: yellow;
+    position: relative;
+    width: 100%;
+    height: 680px;
+  
+    .nav{
+        width: 1240px;
+        height: 80px;
+        position: absolute;
+         z-index: 999;
+         left: 0;
+         right: 0;
+         margin: 0 auto;
+     
+         .logo{
+             float: left;
+             margin-top: 28px;
+             img{
+                 width: 125px;
+                 height: 24px;
+             }
+            }
+         .list{
+            float: left;
+            margin-left: 110px;
+            height: 80px;
+            line-height: 80px;
+            li{
+                float: left;
+                padding: 0 18px;
+                a{
+                    color: #fff;
+                    &:hover{
+                        color: #008cff;
+                    }
+                }
+                
+            }
+         }
+       .search{
+           float: left;
+           width: 170px;
+           height: 30px;
+           line-height: 29px;
+           font-size: 12px;
+           background: #fff url('../image/search.jpg') no-repeat right 8px center;
+           border-radius: 20px;
+           border: 1px solid #999;
+           box-sizing: border-box;
+           margin-top: 26px;
+           margin-left: 10px;
+           
+           .searchLeft{
+            display: block;
+            border: none;
+            padding: 0;
+            outline: 0;
+            width: 127px;
+            height: 20px;
+            margin-left: 15px;
+            margin-top: 5px;
+            font-size: 12px;
+            line-height: 20px;
+            color: #333;
+            background: transparent;
+            box-sizing: content-box;
+            outline-offset: 0;
         }
-        &:visited{
-          color: #999;
-        }
+           }
+           .login{
+               float: left;
+               margin-left: 30px;
+               margin-top: 28px;
+               margin-right: 20px;
+           }
+           .shopping{
+            float: left;
+            margin-top: 28px;
+           }
+       }
+   .banner{
+       
+      height: 680px;
+       margin: 0 auto;
+       position: relative;
+       overflow: hidden;
+      .show{
+          z-index: 10;
       }
+     img{  
+               position: absolute;
+         left:50%;
+         top: 0;
+     opacity: 0.02;
+     transform: translateX(-50%);
+   }
+     }
+ .num{
+     position: absolute;
+    left: 0;
+     overflow: hidden;
+     right: 0;
+     width: 200px;
+     margin: 0 auto;
+  bottom: 20px;
+     z-index: 300;
+     .active{
+         background-color: #999;
+     }
+     li{
+        float: left;
+             width: 20px;
+             height: 20px;
+             line-height: 20px;
+             text-align: center;
+             border-radius: 50%;
+             background-color: white;
+             margin-left: 5px;
+            //  margin-top: 10px;
+   }
+   
+ }
+ .move{
+     position: absolute;
+     width: 100%;
+     height: 267px;
+     top: 0;
+     background-color:#fff;
+     display: none;
+     z-index: 100;
+     .moveContent{
+         position: relative;
+         width: 1400px;
+         top: 102px;
+         left: 0;
+         right: 0;
+         margin: 0 auto;
+         padding: 0 100px;
+         div{
+             float: left;
+             font-size: 12px;
+             margin: 0 26px;
+             text-align: center;
+             img{
+                width: 90px;
+                height: 100px;
+                margin-bottom: 10px;
+            }
+            h2{
+               font-size: 12px;
+               height: 19px;
+               line-height: 19px;
+               text-align: center;
+            }
+            span{
+               height: 15px;
+               line-height: 15px;
+               text-align: center;
+            }
+         }
+     }
+    
+ }
+ .appMove{
+    position: absolute;
+    width: 100%;
+    height: 385px;
+    top: 0;
+    background-color:#fff;
+    display: none;
+    z-index: 200;
+    .appContent{
+        width: 1240px;
+        position: absolute;
+        background-color: green;
+        top: 80px;
+         left: 0;
+         right: 0;
+         margin: 0 auto;
+        img{
+            width: 1240px;
+            
+        }
     }
   }
-  .footer{
-    height: 100px;
-    background-color: #ddd;
-    h2{
-      @extend .show;//继承
+}
+//福利区
+.welfare{
+    width: 100%;
+    background-color: #fff;
+}
+.content-one{
+    width: 1240px;
+    margin: 0 auto;
+    height: 238px;
+    padding-top: 40px;
+    div{
+        float: left;
+        margin:0 90px;
+        text-align: middle;
+        img{
+            width: 130px;
+            height: 130px;
+        }
+        h2{
+            color: #333;
+            font-size: 20px;
+            text-align: center;
+            height: 30px;
+            line-height: 30px;
+        }
+        p{
+            font-size: 14px;
+            color: #999;
+            height: 21px;
+            line-height: 21px;
+            text-align: center;
+        }
     }
-    @import './list';
-    h3{
-      color: red;
-      font-weight: normal;
-      font-size: 20px;
+}
+
+//手机
+.newPhoneone{
+    width: 100%;
+    background-color: #f4f4f4;
+    .newPhone{
+        width: 1240px;
+        margin: 0 auto;
+        height: 50px;
+        // background-color: red;
+        padding-top: 60px;
+        h3{
+            font-size: 30px;
+            font-weight: 400;
+            line-height: 45px;
+            height: 45px;
+            text-align: center;
+        }
     }
-  }
+}
+//新品
+.summer{
+    position: relative;
+    height: 450px;
+    img{
+        position: absolute;
+        width: auto;
+        height: auto;
+        left: 50%;
+        top: 225px;
+        overflow: hidden;
+        transform: translate(-50%,-50%);
+    }
+}
+//魅族17新品
+.new{
+    // background-color: red;
+    margin: 0 auto;
+    width: 1240px;
+    padding-top: 12px;
+    overflow: hidden;
+    div{
+        background-color: #fff;
+        width: 615px;
+        height: 553px;
+        padding-top: 57px;
+        float: left;
+        margin-right: 10px;
+        position: relative;
+        h5{
+            position: absolute;
+            background-color:#c00 ;
+            top: 30px;
+            left: 30px;
+            display: block;
+            width: 60px;
+            height: 60px;
+            line-height: 60px;
+            color: #fff;
+            font-size: 16px;
+            text-align: center;
+            border-radius: 50%;
+        }
+         h3{
+            color: #333;
+            font-size: 28px;
+            font-weight: 400;
+            height: 45px;
+            line-height: 45px;
+            text-align: center;
+         }
+         p{
+             
+            color: #333;
+            font-size: 18px;
+            height: 24px;
+            line-height: 24px;
+            text-align: center;
+            margin-bottom: 3px
+         }
+        img{
+            
+            width: 460px;
+            height: 460px;
+            text-align: center;
+            margin-left: 88px;
+        }
+        
+        span{
+            margin-left: 273px;
+            i{  
+                font-size: 14px;
+                color: #c00;
+                line-height: 21px;
+                height: 21px;
+                text-align: center;
+               
+            }
+            em{
+                
+                font-size: 22px;
+                color: #c00;
+                height: 33px;
+                line-height: 33px;
+                text-align: center;
+               
+            }
+        }
+    }
+     
 }
 
-// 引入外部sass文件
-// @import './list.scss';
-@import './list';
-
-// 混合 @mixin
-@mixin common{
-  list-style: none;
-  li{
-    color: blue;
-    font-size: 20px;
-  }
+.new .Meizu17{
+    margin-right: 0;
 }
-@mixin test ($width,$color){// 传参
-  list-style: none;
-  overflow: hidden;
-  li{
-    float: left;
-    width: $width;
-    height: 100px;
-    margin-left: 20px;
-    background-color: $color;
-  }
+.detail{
+    width: 1240px;
+    margin: 0 auto;
+    // background-color: royalblue;
+    overflow: hidden;
+    margin-top: 10px;
+   li{
+       width: 303px;
+       height: 375px;
+       float: left;
+       text-align: center;
+       margin-right: 9.2px;
+       background-color: #fff;
+       background-repeat: no-repeat;
+       background-position: 50%;
+       h3{
+        color: #333;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+        margin-bottom: 2px;
+       }
+       p{
+        color: #999;
+        font-size: 14px;
+        height: 21px;
+        line-height: 21px;
+        text-align: center;
+       }
+       img{
+           width: 230px;
+           height: 230px;
+           display: inline-block;
+       }
+       span{
+        i{  
+            font-size: 14px;
+            color: #c00;
+            line-height: 21px;
+            height: 21px;
+            text-align: center;
+           
+        }
+        em{
+            
+            font-size: 22px;
+            color: #c00;
+            height: 33px;
+            line-height: 33px;
+            text-align: center;
+           
+        }
+    }
+   }
 }
-.list{
-  // @include common;
-  @include test(200px,blue);
-  @if 5>3 {border: 4px solid #ccc;}
-  @if 5<3 {border: 4px solid red;}
+ul li:nth-child(4){
+    margin-right: 0;
 }
-
-@for $i from 1 through 4 {
-  .li-#{$i} {
-    width: $i*50px;
-  }
+//社区热帖
+.community{
+    width: 1240px;
+    margin: 0 auto;
+    overflow: hidden;
+    // background-color: seagreen;
+    div{
+        width: 303px;
+        height: 388px;
+        margin-right: 9px;
+        margin-bottom: 9px;
+        float: left;
+        background-color: #fff;
+        img{
+            width: 303px;
+            height: 190px;
+        }
+        p{
+            overflow: hidden;
+            height: 42px;
+            line-height: 42px;
+            margin-top: 10px;
+            padding: 0 15px;
+            img{
+                width: 36px;
+                height: 36px;
+                border: 1px solid #fff;
+                border-radius: 50%;
+                float: left;
+                box-shadow: 1px 1px 1px 1px #eee
+            }
+            span{
+                margin-left: 15px;
+                text-align: left;
+            }
+        }
+        i{
+            padding: 10px 15px 15px;
+            font-size: 16px;
+            line-height: 27px;
+            text-align: left;
+            height: 66px;
+            overflow: hidden;
+        }
+        span{
+            color: #999;
+            display: block;
+            padding: 0 15px;
+            margin-top: 10px;
+            text-align: left;
+        }
+    }
 }
-
-
+.community div:nth-child(4n){
+    margin-right: 0;
+}
+//底部
+.footer{
+    width: 100%;
+    background-color: #fff;
+    .footerContent{
+        width: 1240px;
+        height: 178px;
+        background-color: skyblue;
+        margin: 0 auto;
+        padding: 48px 0 20px;
+        border-top: 1px solid #f1f1f1;
+        .footerContentone{
+            position: relative;
+            border-bottom: 1px solid #ccc;
+            overflow: hidden;
+            a{   width: 150px;
+                height: 69px;
+                line-height: 27px;
+                font-size: 12px;
+                color: #666;
+                display: block;
+                float: left;
+                text-align: center;
+                img{
+                    width: 50px;
+                    display: block;
+                    margin: 0 auto;
+                }
+                span{
+                    line-height: 30px;
+                    color: #999;
+                    text-align: center;
+                }
+            }
+            p{
+                float: left;
+                margin-left: 100px;
+                
+                em{
+                    color: #008cff;
+                    font-size: 25px;
+                    font-weight: 400;
+                    margin-top: -6px;
+                    line-height: 40px;
+                    position: absolute;
+                    font-style: normal;
+                   top: 0;
+                    right: 0;
+                }
+                a{
+                    width: 90px;
+                    height: 30px;
+                    top: 30px;
+                    right: 0;
+                  padding: 0 5px;
+                    overflow: hidden;
+                    position: absolute;
+                    text-align: center;
+                    line-height: 30px;
+                    color: #fff;
+                    border-radius: 20px;
+                    margin-top: 3px;
+                    display: inline-block;
+                    font-size: 14px;
+                    background: #008cff;
+                }
+            }
+           
+        }
+        .footerContenttwo{
+            padding-top: 20px;
+            ul{
+                overflow: hidden;
+                li{
+                    padding-right: 15px;
+                    border-right: 1px solid #d6d6d6;
+                    float: left;
+                    height: 18px;
+                    margin-right: 15px;
+                   a{
+                    display: block;
+                    line-height: 18px;
+                    color: #999;
+                   }
+                   
+                }
+                .borderNo{
+                    border: none;
+                }
+            }
+           
+        }
+    }
+}
