--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,11 +1,13 @@
-body{
+html,body{
+ 
     background-color: #f4f4f4;
+    width: 100%;
 }
 .wrap{
     position: relative;
     width: 100%;
     height: 680px;
-  
+    overflow: hidden;
     .nav{
         width: 1240px;
         height: 80px;
@@ -75,12 +77,41 @@ body{
                margin-left: 30px;
                margin-top: 28px;
                margin-right: 20px;
+               position: relative;
+               ul{
+                   position: absolute;
+                   padding-top: 8px;
+                   left: -30px;
+                   top: 32px;
+                   width: 97px;
+                   height: 60px;
+                   background-color: #ffffff;
+                   display: none;
+                   li{
+                     height: 30px;
+                     line-height: 30px;
+                     text-align: center;
+                    
+                     a{
+                         color:#333;
+                     }
+                     a:hover{
+                         color: #c00;
+                     }
+                   }
+                   li:hover{
+                    background-color: #f4f4f4;
+                   }
+               }
            }
            .shopping{
             float: left;
             margin-top: 28px;
            }
        }
+
+
+       //轮播图
    .banner{
        
       height: 680px;
@@ -123,6 +154,7 @@ body{
    }
    
  }
+ //鼠标移入移出显示数据
  .move{
      position: absolute;
      width: 100%;
@@ -242,6 +274,7 @@ body{
     }
 }
 //新品
+
 .summer{
     position: relative;
     height: 450px;
@@ -255,7 +288,10 @@ body{
         transform: translate(-50%,-50%);
     }
 }
+
 //魅族17新品
+
+
 .new{
     // background-color: red;
     margin: 0 auto;
@@ -317,6 +353,7 @@ body{
                 line-height: 21px;
                 height: 21px;
                 text-align: center;
+                font-style: normal;
                
             }
             em{
@@ -326,16 +363,19 @@ body{
                 height: 33px;
                 line-height: 33px;
                 text-align: center;
+                font-style: normal;
                
             }
         }
     }
      
 }
-
-.new .Meizu17{
+.new div:nth-child(2n){
     margin-right: 0;
 }
+
+//细节
+
 .detail{
     width: 1240px;
     margin: 0 auto;
@@ -377,6 +417,7 @@ body{
             line-height: 21px;
             height: 21px;
             text-align: center;
+            font-style: normal;
            
         }
         em{
@@ -386,6 +427,7 @@ body{
             height: 33px;
             line-height: 33px;
             text-align: center;
+            font-style: normal;
            
         }
     }
@@ -394,7 +436,9 @@ body{
 ul li:nth-child(4){
     margin-right: 0;
 }
+
 //社区热帖
+
 .community{
     width: 1240px;
     margin: 0 auto;
@@ -425,20 +469,22 @@ ul li:nth-child(4){
                 float: left;
                 box-shadow: 1px 1px 1px 1px #eee
             }
-            span{
+            .community-one{
                 margin-left: 15px;
                 text-align: left;
             }
         }
         i{
+            display: block;
             padding: 10px 15px 15px;
             font-size: 16px;
             line-height: 27px;
             text-align: left;
             height: 66px;
             overflow: hidden;
+            font-style: normal;
         }
-        span{
+        .community-two{
             color: #999;
             display: block;
             padding: 0 15px;
@@ -450,6 +496,7 @@ ul li:nth-child(4){
 .community div:nth-child(4n){
     margin-right: 0;
 }
+
 //底部
 .footer{
     width: 100%;
@@ -457,12 +504,14 @@ ul li:nth-child(4){
     .footerContent{
         width: 1240px;
         height: 178px;
-        background-color: skyblue;
+        // background-color: skyblue;
+        position: relative;
         margin: 0 auto;
         padding: 48px 0 20px;
         border-top: 1px solid #f1f1f1;
         .footerContentone{
             position: relative;
+            padding-bottom: 20px;
             border-bottom: 1px solid #ccc;
             overflow: hidden;
             a{   width: 150px;
@@ -520,7 +569,7 @@ ul li:nth-child(4){
            
         }
         .footerContenttwo{
-            padding-top: 20px;
+            padding-top: 30px;
             ul{
                 overflow: hidden;
                 li{
@@ -533,6 +582,9 @@ ul li:nth-child(4){
                     display: block;
                     line-height: 18px;
                     color: #999;
+                    &:hover{
+                        color:#008cff;
+                    }
                    }
                    
                 }
@@ -540,7 +592,68 @@ ul li:nth-child(4){
                     border: none;
                 }
             }
+           p{
+               margin-top: 10px;
+               font-size: 12px;
+               color:#999;
+               float: left;
+               position: relative;
+               a{
+                color:#999;
+                &:hover{
+                    color:#008cff;
+                }
+                
+               }
+               .one{
+                position:absolute;
+                right: -30px;
+                
+            }
+            .two{
+                position:absolute;
+                right: -55px;
+                
+            }
+            .three{
+                position:absolute;
+                right: -80px;
+                
+            }
+            i{
+                position: absolute;
+                right: -365px;
+                font-style: normal;
+                em{
+                    float: left;
+                    font-style: normal;
+                    margin:0 5px
+                }
+            }
+           }
            
         }
+        .subscribe{ 
+            position: absolute;
+            top: 20px;
+            right: 0px;
+            display: none;
+                 
+               img{
+                   width: 160px;
+                   height: 160px;
+               }
+           }
+           .weChat{ 
+            position: absolute;
+            top: 20px;
+            right: 0px;
+            display: none;
+                 
+               img{
+                   width: 160px;
+                   height: 160px;
+               }
+           }
     }
 }
