--- a/sass/list.scss
+++ b/sass/list.scss
@@ -336,17 +336,17 @@ body{
                 background-color: #c00;
                 margin-left: 10px;
             }
-            .circle{
-                display: block;
-                    float: left;
-                    width: 30px;
-                    height: 30px;
-                    line-height: 30px;
-                    text-align: center;
-                    border-radius: 50%;
-                    background-color:#f4f4f4;
-                    border: 1px solid black;
-            }
+            // .circle{
+            //     display: block;
+            //         float: left;
+            //         width: 30px;
+            //         height: 30px;
+            //         line-height: 30px;
+            //         text-align: center;
+            //         border-radius: 50%;
+            //         background-color:#f4f4f4;
+            //         border: 1px solid black;
+            // }
           
         }
         
