--- a/sass/detail.scss
+++ b/sass/detail.scss
@@ -182,7 +182,7 @@ body{
       opacity: 0.6;
       border-bottom: 1px solid #dedede;
       z-index: 9999;
-      display: none;
+      display: block;
       .title{
           width: 1240px;
           height: 70px;
