--- a/sass/index.scss
+++ b/sass/index.scss
@@ -309,6 +309,9 @@ html,body{
         float: left;
         margin-right: 10px;
         position: relative;
+        &:hover{
+            box-shadow: 0 15px 30px rgba(0,0,0,.3);
+        }
         h5{
             position: absolute;
             background-color:#c00 ;
@@ -394,6 +397,9 @@ html,body{
        background-color: #fff;
        background-repeat: no-repeat;
        background-position: 50%;
+       &:hover{
+        box-shadow: 0 15px 30px rgba(0,0,0,.3);
+    }
        h3{
         color: #333;
         font-size: 16px;
@@ -454,6 +460,9 @@ ul li:nth-child(4){
         margin-bottom: 9px;
         float: left;
         background-color: #fff;
+        &:hover{
+            box-shadow: 0 15px 30px rgba(0,0,0,.3);
+        }
         img{
             width: 303px;
             height: 190px;
